platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_101.platter
start() {
    piece of x = 12  + 13 ;
    sip of y = 123;
    serve 0
}